--- a/code/analyze.ipynb
+++ b/code/analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -31,22 +31,20 @@
      "text": [
       "../output_data/suspect1_0.pkl\n",
       "Pa is 99.633391 percent\n",
+      "Average Tmr is 0.207153\n",
       "../output_data/suspect1_2.pkl\n",
       "Pa is 99.387269 percent\n",
+      "Average Tmr is 0.219287\n",
       "../output_data/suspect1_3.pkl\n",
       "Pa is 99.869545 percent\n",
+      "Average Tmr is 0.218590\n",
       "../output_data/suspect1_4.pkl\n",
       "Pa is 97.667220 percent\n",
+      "Average Tmr is 0.199095\n",
       "../output_data/suspect1_5.pkl\n",
       "Pa is 99.769030 percent\n",
-      "../output_data/suspect1_6.pkl\n",
-      "Pa is 99.795466 percent\n",
-      "../output_data/suspect1_7.pkl\n",
-      "Pa is 99.869179 percent\n",
-      "../output_data/suspect1_8.pkl\n",
-      "Pa is 99.829589 percent\n",
-      "../output_data/suspect1_9.pkl\n",
-      "Pa is 99.845581 percent\n"
+      "Average Tmr is 0.215756\n",
+      "../output_data/suspect1_6.pkl\n"
      ]
     }
    ],
@@ -63,12 +61,17 @@
     "        f.close()\n",
     "        \n",
     "        total_suspect_t=0\n",
+    "        tmr=0\n",
     "        for (k, interval) in enumerate(suspect_intervals):\n",
     "            total_suspect_t+=interval[1]-interval[0]\n",
+    "            if (k+1==len(suspect_intervals)): continue;\n",
+    "            tmr += suspect_intervals[k+1][0]-suspect_intervals[k][1]\n",
+    "        tmr/=len(suspect_intervals)-1\n",
     "        #print(total_suspect_t)\n",
     "        #print(end_time-start_time)\n",
     "        pa = 1-total_suspect_t/(end_time-start_time)\n",
     "        print(\"Pa is %f percent\"%(pa*100,))\n",
+    "        print(\"Average Tmr is %f\"%(tmr/1e9))\n",
     "        #print(start_time, end_time)\n",
     "        "
    ]
